Bugfix img
Fixed bug that sometimes caused images in the collage to be extremely
stretched out on some browsers.

--- a/assets/css/front.css
+++ b/assets/css/front.css
@@ -90,6 +90,7 @@ a {
 
 .home .content .textbox .collage img {
   width: 180px;
+  height: 180px;
   border: 5px solid #fff;
   box-shadow: 0px 0px 30px #aaa;
   transform:  rotate(5deg);
